Fix labels color contrast

--- a/style.css
+++ b/style.css
@@ -370,7 +370,7 @@ h2.lets-connect {
 }
 
 .labels {
-  color: #6070ff;
+  color: #000638;
   height: 0;
 }
 
